# fuel_expense_bot

./: .env.container  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  pod-with-configmap.yaml  pod.yaml  pvc.yaml
.kiro/specs/containerized-deployment/: design.md  requirements.md  tasks.md
.kiro/specs/enhanced-expense-management/: design.md  requirements.md  tasks.md
.kiro/specs/rust-telegram-bot-migration/: design.md  requirements.md  tasks.md
diagrams/: febER.puml
docs/: QUICKSTART.md  SETUP_SUMMARY.md
examples/: db.sql  mqtt_sensor_def_ha.yaml
proptest-regressions/db/: repository_test.txt
scripts/: build-image.sh  initdb.sql  read_from_excel.py  rebuild-and-restart.sh  requirements.txt  restart-pod.sh  setup-dev-db.sh  start-pod.sh
scripts/gapis_test/: README.md  index.js
src/: bot.js  config.rs  dataStore.js  db.js  lib.rs  main.rs  publisher.js
src/bot/: dispatcher.rs  handlers.rs  handlers_test.rs  mod.rs
src/db/: mod.rs  models.rs  pool.rs  repository.rs  repository_test.rs
src/services/: expense_service.rs  expense_service_test.rs  mod.rs  user_service.rs  version_service.rs
src/utils/: date.rs  error.rs  mod.rs
test/: dataStore.test.js
